--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
-    "eleventy-plugin-reading-time": "^0.0.1",
+    "@11tyrocks/eleventy-plugin-emoji-readtime": "^1.0.1",
     "luxon": "^2.3.1",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1"
